Add support for illumos/OmniOS

--- a/config/cloud.cfg.tmpl
+++ b/config/cloud.cfg.tmpl
@@ -4,7 +4,9 @@
 {% set is_bsd = variant in ["dragonfly", "freebsd", "netbsd", "openbsd"] %}
 {% set is_rhel = variant in ["almalinux", "centos", "cloudlinux", "eurolinux",
                              "miraclelinux", "rhel", "rocky", "virtuozzo"] %}
+{% set is_illumos = variant in ["omnios", "illumos"] %}
 {% set gecos = ({"amazon": "EC2 Default User", "azurelinux": "Azure Linux",
+                 "omnios": "OmniOS user",
                  "centos": "Cloud User", "debian": "Debian",
                  "dragonfly": "DragonFly", "freebsd": "FreeBSD",
                  "mariner": "MarinerOS", "rhel": "Cloud User",
@@ -12,6 +14,7 @@
                  "openmandriva": "OpenMandriva admin", "photon": "PhotonOS",
                  "ubuntu": "Ubuntu", "unknown": "Ubuntu"}) %}
 {% set groups = ({"alpine": "adm, wheel", "aosc": "wheel", "arch": "wheel, users",
+                  "omnios": "other",
                   "azurelinux": "wheel",
                   "debian": "adm, audio, cdrom, dialout, dip, floppy, netdev, plugdev, sudo, video",
                   "gentoo": "users, wheel", "mariner": "wheel",
@@ -22,8 +25,10 @@
                   "unknown": "adm, cdrom, dip, lxd, sudo"}) %}
 {% set shells = ({"alpine": "/bin/ash", "dragonfly": "/bin/sh",
                   "freebsd": "/bin/tcsh", "netbsd": "/bin/sh",
+                  "omnios": "/bin/bash",
                   "openbsd": "/bin/ksh"}) %}
 {% set usernames = ({"amazon": "ec2-user", "centos": "cloud-user",
+                     "omnios": "omnios",
                      "openmandriva": "omv", "rhel": "cloud-user",
                      "unknown": "ubuntu"}) %}
 {% if is_bsd %}
@@ -117,7 +122,9 @@ cloud_init_modules:
   - bootcmd
   - write_files
 {% if variant not in ["netbsd", "openbsd"] %}
+{% if not is_illumos %}
   - growpart
+{% endif %}
   - resizefs
 {% endif %}
 {% if not is_bsd %}
@@ -228,7 +235,7 @@ system_info:
 {% if variant in ["alpine", "amazon", "aosc", "arch", "azurelinux", "debian", "fedora",
                   "freebsd", "gentoo", "mariner", "netbsd", "openbsd",
                   "OpenCloudOS", "openeuler", "openmandriva", "photon", "suse",
-                  "TencentOS", "ubuntu"] or is_rhel %}
+                  "TencentOS", "ubuntu"] or is_rhel or is_illumos %}
   distro: {{ variant }}
 {% elif variant == "dragonfly" %}
   distro: dragonflybsd
@@ -247,7 +254,7 @@ system_info:
                   "gentoo", "mariner", "OpenCloudOS", "openeuler",
                   "openmandriva", "photon", "suse", "TencentOS", "ubuntu",
                   "unknown"]
-                 or is_bsd or is_rhel %}
+                 or is_bsd or is_rhel or is_illumos %}
     lock_passwd: True
 {% endif %}
 {% if variant in gecos %}
@@ -276,6 +283,9 @@ system_info:
     doas:
       - permit nopass {{ variant }}
 {% endif %}
+{% endif %}
+{% if is_illumos %}
+    profiles: Primary Administrator
 {% endif %}
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
 {% if variant in shells %}
@@ -337,6 +347,12 @@ system_info:
 {% elif is_bsd %}
   paths:
     run_dir: /var/run/cloud-init/
+{% endif %}
+{% if is_illumos %}
+  paths:
+    run_dir: /var/run/cloud-init/
+    cloud_dir: /var/run/cloud-init/
+    templates_dir: /etc/cloud/templates/
 {% endif %}
 {% if variant == "debian" %}
   package_mirrors:
